# 9-Innings-Tools

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
ovr_analysis/: screenshot_reader.py
tools/: five_tool.py  ovr_analysis.py  ranked_stats.py  stats_parser.py  ticket_probs.py
utils/: screenshot_reader.py
