[project]
name = "9-innings-tools"
version = "0.1.0"
description = "A collection of tools for the MLB 9 Innings mobile game."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.4",
    "numpy>=2.2.4",
    "opencv-fixer>=0.2.5",
    "opencv-python-headless>=4.11.0.86",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "st-pages>=1.0.1",
    "stqdm>=0.0.5",
    "streamlit>=1.44.1",
]

[dependency-groups]
dev = ["jupyterlab>=4.4.0", "pre-commit>=4.2.0", "ruff>=0.11.4", "uv>=0.6.12"]
